--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
     "monolog/monolog": "^1.22",
     "php-di/php-di": "^5.4",
     "league/html-to-markdown": "^4.4",
-    "altorouter/altorouter": "^1.2",
+    "altorouter/altorouter": "^1.2"
     }
 }
