--- a/bower.json
+++ b/bower.json
@@ -52,6 +52,7 @@
     "bootstrap-toggle": "^2.2.2",
     "table-export": "*",
     "jquery.are-you-sure": "^1.9.0",
-    "bootstrap-tags": "^1.1.6"
+    "bootstrap-tags": "^1.1.6",
+    "tag-it": "*"
   }
 }
