--- a/bower.json
+++ b/bower.json
@@ -53,6 +53,7 @@
     "table-export": "*",
     "jquery.are-you-sure": "^1.9.0",
     "bootstrap-tags": "^1.1.6",
-    "tag-it": "*"
+    "tag-it": "*",
+    "iban": "^0.0.10"
   }
 }
