--- a/www/json/manifest.json
+++ b/www/json/manifest.json
@@ -4,18 +4,18 @@
     "description": "Progressive Web App that lists art gallery.",
     "icons": [
         {
-            "src": "img/vpatina-logo-334.jpg",
+            "src": "img/vpatina-logo-334.png",
             "sizes": "32x32",
-            "type": "img/jpg"
+            "type": "img/png"
         },
         // ...
         {
-            "src": "img/vpatina-logo-334.jpg",
+            "src": "img/vpatina-logo-334.png",
             "sizes": "512x512",
-            "type": "image/jpg"
+            "type": "image/png"
         }
     ],
-    "start_url": "https://www.vpatina.com/backend",
+    "start_url": "http://staging.vpatina.com/backend",
     "display": "fullscreen",
     "theme_color": "#B12A34",
     "background_color": "#B12A34"
