--- a/www/json/manifest.json
+++ b/www/json/manifest.json
@@ -1,22 +1,1 @@
-{
-    "name": "Vpatina Progressive Web App",
-    "short_name": "Vpatina",
-    "description": "Progressive Web App that lists art gallery.",
-    "icons": [
-        {
-            "src": "img/vpatina-logo-334.png",
-            "sizes": "32x32",
-            "type": "img/png"
-        },
-        // ...
-        {
-            "src": "img/vpatina-logo-334.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ],
-    "start_url": "http://staging.vpatina.com/backend",
-    "display": "fullscreen",
-    "theme_color": "#B12A34",
-    "background_color": "#B12A34"
-}
+{"name":"Vpatina","short_name":"Vpatina","description":"Progressive Web App that lists art gallery.","icons":[{"src":"\/img\/vpatina-logo-48.png","sizes":"48x48","type":"img\/png"},{"src":"\/img\/vpatina-logo-512.png","sizes":"512x512","type":"image\/png"}],"start_url":"https:\/\/new.vpatina.dci.in\/profile\/20890","display":"fullscreen","theme_color":"#333","background_color":"#333"}
