--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "php-di/php-di": "^5.4",
     "league/html-to-markdown": "^4.4",
       "altorouter/altorouter": "^1.2",
-      "docnet/tFPDF" : "^2.1"
+      "docnet/tFPDF" : "^2.1",
+    "phpmailer/phpmailer": "^6.6"
     }
 }
